--- a/css/build_pc.css
+++ b/css/build_pc.css
@@ -295,12 +295,12 @@ html {
     color: #2c2c2c; text-decoration: none; width: 420px;
 }
 
-.select_item .select_btn {
-    height: 46px; border: 3px solid #2c3e50; display: flex; align-items: center; margin-left: 100px; border-radius: 8px; background-color: #f2f2f2;
+.select_item button {
+    height: 46px; border: 3px solid #2c3e50; margin-left: 100px; border-radius: 8px; font-size: 18px; font-weight: 600; padding: 4px 32px; color: #2c3e50; text-transform: uppercase; font-family: 'Roboto', sans-serif; cursor: pointer;
 }
 
-.select_item .select_btn a {
-    display: inline-block; text-decoration: none; text-transform: uppercase; color: #2c3e50; font-size: 18px; font-weight: 600; padding: 4px 32px;
+.select_item button:hover {
+    background-color: #2c3e50; color: #fff; cursor: pointer;
 }
 
 .config_name {
@@ -308,7 +308,15 @@ html {
 }
 
 .quantity {
-    width: 100px; display: flex; align-items: center; color: #2c3e50; justify-content: center; font-size: 20px; font-weight: 500;
+    width: 100px; display: flex; align-items: center; color: #2c3e50; justify-content: center;
+}
+
+.quantity button{
+    display: flex; align-items: center; justify-content: center;background-color: #fff; width: 30px; height: 30px; border: 1px solid #838383;  cursor: pointer;
+}
+
+.quantity input {
+    width: 36px; height: 30px; border: 1px solid #838383; border-left: 0; border-right: 0; text-align: center; font-size: 18px; font-weight: 500; color: #2c2c2c;
 }
 
 .sub_total {
