--- a/css/build_pc.css
+++ b/css/build_pc.css
@@ -36,7 +36,7 @@ html {
 .nav li a:hover {
     text-decoration: none;
 }
-
+/* 
 .nav .all-categories {
     width: 288px;
     height: 54px;
@@ -51,7 +51,7 @@ html {
     font-weight: 700;
     margin-right: 20px;
     margin-left: 20px;
-}
+} */
 
 
 /* header-search */
@@ -316,7 +316,7 @@ html {
 }
 
 .quantity input {
-    width: 36px; height: 30px; border: 1px solid #838383; border-left: 0; border-right: 0; text-align: center; font-size: 18px; font-weight: 500; color: #2c2c2c;
+    width: 36px; height: 30px; border: 1px solid #838383; border-left: 0; border-right: 0; text-align: center; font-size: 16px; font-weight: 500; color: #2c2c2c;
 }
 
 .sub_total {
@@ -325,4 +325,76 @@ html {
 
 .remove {
     width: 100px; display: flex; align-items: center; font-size: 20px; color: #2c3e50; justify-content: center; padding-right: 20px;
+}
+
+.sort_by {
+    display: flex;
+    align-items: center;
+}
+  
+  .sortby__label {
+    margin-right: 10px;
+    font-weight: bold;
+    color: #2c3e50;
+}
+  
+.sortby__dropdown select {
+    /* appearance: none; */
+    background-color: transparent;
+    border: 2px solid #2c3e50;
+    padding: 5px 10px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #2c2c2c;
+    cursor: pointer;
+}
+  
+.sortby__dropdown select:focus {
+    outline: none;
+}
+  
+.sortby__dropdown select option {
+    background-color: #fff;
+    color: #2c2c2c;
+}
+  
+.sortby__dropdown select option:hover {
+    background-color: #f2f2f2;
+}
+
+
+.main__content .product {
+    background-color: #f2f2f2; padding: 12px 32px 12px 24px; display: flex; align-items: center; justify-content: space-between; margin: 12px 0;
+}
+
+.main__content .prod__img {
+    display: flex; align-items: center; justify-content: center; overflow: hidden; width: 120px; height: 120px; border: 2px solid #2c3e50;
+}
+
+.main__content .prod__img img {
+    min-width: 100%; min-height: 100%; object-fit: cover;
+}
+
+.main__content .product a {
+    color: #2c3e50; text-decoration: none;
+}
+
+.main__content .prod__name {
+    width: 440px; font-size: 16px; font-weight: 400; margin-left: 8px;
+}
+
+.main__content .prod__config {
+    width: 200px; font-size: 16px; font-weight: 600; color: #2c3e50; text-align: center; display: flex; align-items: center; justify-content: center;
+}
+
+.main__content .prod__price {
+    width: 116px; display: flex; align-items: center; justify-content: center; font-size: 20px; font-weight: 600;
+}
+
+.main__content button {
+    width: 140px; height: 44px; display: flex; align-items: center; justify-content: center; color: #f2f2f2; background-color: #2c3e50; text-transform: uppercase; font-size: 16px; font-weight: 500; border-radius: 8px; cursor: pointer;
+}
+
+.main__content button:hover {
+    background-color: #2c2c2c; color: #ffc107;
 }
