--- a/css/build_pc.css
+++ b/css/build_pc.css
@@ -398,3 +398,51 @@ html {
 .main__content button:hover {
     background-color: #2c2c2c; color: #ffc107;
 }
+
+.setup_to_cart {
+    display: flex; background-color: #2c3e50; justify-content: space-between; margin-bottom: 60px; margin-top: 40px; padding: 8px 40px; padding-top: 24px;
+}
+
+.note_buildpc {
+    width: 624px; height: 180px; display: flex; align-items: center; color: #fff; font-size: 17px; font-weight: 300; line-height: 28px;
+}
+
+.button_action {
+    display: flex; justify-content: space-around; margin-top: 32px; padding-left: 92px;
+}
+
+.button_action button {
+    width: 280px; height: 64px; font-size: 24px; font-weight: 600; text-transform: uppercase; border-radius: 8px; border: none; cursor: pointer;
+}
+
+.popup_overlay {
+    position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); z-index: 9999; display: none; justify-content: center; align-items: center;
+}
+
+.popup_overlay .popup-content {
+    width: 1288px; height: 762px; background-color: #fff; box-shadow: 0px 0px 16px 4px rgba(255, 255, 255, 0.2);
+}
+
+.popup__header {
+    height: 120px; background-color: #2c3e50; display: flex; align-items: center; justify-content: space-between; padding: 0 24px;
+}
+
+.popup__header .popup__logo {
+    display: flex; align-items: center; margin-left: 40px;
+}
+
+.popup__search {
+    display: flex; background-color: #fff; width: 462px; height: 52px; border-radius: 24px; padding: 2px 0; margin-right: 100px;
+}
+
+.popup__search input {
+    border: none; font-size: 20px; margin-left: 44px; width: 349px;
+}
+
+.popup__search button {
+    border: none; color: #2c3e50; font-size: 30px; cursor: pointer; background-color: #fff; padding: 0 9px;
+}
+
+.popup__close {
+    font-size: 36px; color: #fff; background-color: #2c3e50; border: none; cursor: pointer; padding: 8px 12px; margin-bottom: 44px;
+}
